--- a/WebApp_Tienda/pom.xml
+++ b/WebApp_Tienda/pom.xml
@@ -56,6 +56,14 @@
           <scope>compile</scope>
       </dependency>
 
+    <!-- https://mvnrepository.com/artifact/jstl/jstl -->
+    <dependency>
+      <groupId>jstl</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
